# ia-structure

./: LICENSE  README.md  TEMPLATE.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Canvas/: FlowCanvas.tsx  index.ts
src/components/Canvas/edges/: index.tsx
src/components/Canvas/nodes/: ArchitectureNode.tsx  DecisionNode.tsx  EntryNode.tsx  ErrorNode.tsx  ExitNode.tsx  StepNode.tsx  index.ts
src/components/FileViewer/: FileViewer.tsx
src/components/Modals/: WelcomeScreen.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Toolbar/: Toolbar.tsx
src/engine/: autoLayout.ts  graphBuilder.ts  mermaidParser.ts  relationshipEngine.ts
src/parsers/: flowParser.ts  markdownParser.ts  nodeDetector.ts
src/stores/: canvasStore.ts  fileViewerStore.ts  filterStore.ts  projectStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: helpers.ts  tauri.ts
